# glassbox

./: .gitignore  README.md
agent/: README.md  TRIAGE_DEMO.md  pyproject.toml
agent/demo/synthetic-triage/: case-01-document-control.png.synthetic.json  case-02-benign-job-offer.png.synthetic.json  case-03-withheld-pay-threat.png.synthetic.json
agent/glassbox_agent/: __init__.py  app.py  config.py  frontmost.py  gcal.py  holo_desktop.py  holo_mcp.py  popup.py  watcher.py
agent/snapcal/: __init__.py  app.py  config.py  cua_demo.py  gcal.py  holo_desktop.py  holo_mcp.py  model_client.py  popup.py  preflight.py  prefs.py  schema.py  trace.py  triage_app.py  triage_model.py  triage_schema.py  voice_approval.py  whatsapp.py
agent/tests/: test_cua_demo.py  test_preflight.py  test_trace_commit.py  test_triage.py  test_voice_approval.py  test_whatsapp.py
runs/: demo-145057.jsonl  demo-150459.jsonl  demo-150818.jsonl  demo-151325.jsonl  demo-151448.jsonl  demo-153124.jsonl  demo-153536.jsonl  fixture-demo.json  glassbox-review-cua-demo.jsonl  glassbox-review.html  latest.jsonl  whatsapp-handoff.html
viewer/: glassbox.html
